Fix unresponsive select arrow, improve options readability

--- a/www/css/core.css
+++ b/www/css/core.css
@@ -1724,6 +1724,14 @@ input[type="search"]{
 	box-shadow: 1px 1px 0 rgba(255, 255, 255, .5) inset;
 }
 
+select option {
+    color: black;
+}
+
+select[name="tags[]"] option {
+    color: var(--body-text);
+}
+
 label.email input,
 label.search input{
 	padding-left: 2.5rem;
@@ -1761,6 +1769,7 @@ label.select > span + span::after{
 	margin-top: -3px; /* Adjust for Crimson Pro line-height */
 	text-shadow: 1px 1px 0 rgba(255, 255, 255, .5);
 	transition: color .5s;
+	z-index: -1;
 }
 
 label.search:focus-within::before,
